# PINN

./: .gitignore  README
c_logs/: evals.csv  experiment_manifest.json  perf_burgers_adam_210141.csv  perf_burgers_adam_220327.csv  perf_burgers_adam_lbfgs_210750.csv  perf_burgers_adam_lbfgs_220911.csv  perf_burgers_adam_resample_210445.csv  perf_burgers_adam_resample_220619.csv  perf_burgers_adam_resample_lbfgs_211101.csv  perf_burgers_adam_resample_lbfgs_221339.csv  perf_heat_adam_204432.csv  perf_heat_adam_204948.csv  perf_heat_adam_215028.csv  perf_heat_adam_lbfgs_205537.csv  perf_heat_adam_lbfgs_215629.csv  perf_heat_adam_resample_205243.csv  perf_heat_adam_resample_215331.csv  perf_heat_adam_resample_lbfgs_205842.csv  perf_heat_adam_resample_lbfgs_220026.csv
c_runs/: run_burgers_adam_210141.pt  run_burgers_adam_220327.pt  run_burgers_adam_lbfgs_210750.pt  run_burgers_adam_lbfgs_220911.pt  run_burgers_adam_resample_210445.pt  run_burgers_adam_resample_lbfgs_211101.pt  run_burgers_adam_resample_lbfgs_221339.pt  run_heat_adam_204948.pt  run_heat_adam_215028.pt  run_heat_adam_lbfgs_205537.pt  run_heat_adam_lbfgs_215629.pt  run_heat_adam_resample_205243.pt  run_heat_adam_resample_215331.pt  run_heat_adam_resample_lbfgs_205842.pt
cpp/: CMakeLists.txt  README.md  make_common  make_eval  make_experiments  make_model  make_physics  make_sampling  make_train  run_osc.sh
cpp/c_runs/: run_burgers_adam_resample_220619.pt  run_heat_adam_resample_lbfgs_220026.pt
cpp/include/: eval.hpp  model.hpp  physics.hpp  sampling.hpp  train.hpp
cpp/src/: eval.cpp  eval_main.cpp  model.cpp  physics.cpp  run_experiments.cpp  sampling.cpp  train.cpp
logs/: evals.csv  perf_20260425_163006.csv  perf_burgers_adam_182513.csv  perf_burgers_adam_lbfgs_183046.csv  perf_burgers_adam_resample_182800.csv  perf_burgers_adam_resample_lbfgs_183552.csv  perf_heat_adam_181249.csv  perf_heat_adam_lbfgs_181854.csv  perf_heat_adam_resample_181555.csv  (+1 more)
py_logs/: evals.csv  (+9 more)
src/: eval.py  (+7 more)
(+10 files in other folders)
